dataset1235/2025-2/2947369575/users/62474997/executions/1003782500_3455942218.log
== SUBMISSION (2025-09-01 21:52:44)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8) + 45
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:52:13)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:52:15)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:11)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:17)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:51:54)
-- CODE: 
valor_jogo - float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:53:13)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = float(input())

total_compra = (valor_jogo * 8) + 45
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:40)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8) + 45
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:12)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:52:42)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8) + 45
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_disponivel = flost(input())
                       ^^^^^
NameError: name 'flost' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:51:58)
-- CODE: 
valor_jogo - float(input())
valor_disponivel = flost(input())

total_compra = (valor_jogo * 8)
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_jogo - float(input())
    ^^^^^^^^^^
NameError: name 'valor_jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:53:14)
-- CODE: 
valor_jogo = float(input())
valor_disponivel = float(input())

total_compra = (valor_jogo * 8) + 45
resto_dinheiro = valor_disponivel - total_compra

print(round(total_compra, 1))
print(round(resto_dinheiro, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
